plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
//    id "org.sonarqube" version "7.1.0.6387"
    id "org.sonarqube" version "4.4.1.3373"  //  SonarCloud-compatible plugin
    id 'jacoco'
}

group = 'com.adl.dc.ep.taskautomation'
version = '0.0.1-SNAPSHOT'
description = 'task-automation-and-scheduling-system'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.postgresql:postgresql:42.7.4'
	implementation 'org.springframework.boot:spring-boot-starter-security'
    //implementation 'org.springframework.boot:spring-boot-starter-quartz'
    implementation('org.springframework.boot:spring-boot-starter-quartz') {
        exclude group: 'org.quartz-scheduler', module: 'quartz'
    }
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    implementation 'org.quartz-scheduler:quartz:2.3.2'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation group: 'com.openpojo', name: 'openpojo', version: '0.9.1'
	//implementation 'org.springframework.boot:spring-boot-starter-webmvc'
//	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
//	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
//	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	//testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
    // allow reflection into java.time for OpenPojo
    jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED'
}

jacocoTestReport {
    dependsOn tasks.test
    reports {
        xml.required = true   // SonarCloud uses this
        html.required = true  // For you to view locally
    }
}


// 🔑 SonarCloud configuration
sonarqube {
    properties {
        property "sonar.projectKey", "LalinduWenasara_task-automation-and-scheduling-system"
        property "sonar.organization", "lalinduwenasara"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.coverage.jacoco.xmlReportPaths",
                "build/reports/jacoco/test/jacocoTestReport.xml"
    }
}



